# shark-ai

./: .pre-commit-config.yaml  README.md  data.json  pytorch-cpu-requirements.txt  pytorch-rocm-requirements.txt  requirements-iree-pinned.txt  requirements-iree-unpinned.txt
.github/workflows/: build_packages.yml  ci-libshortfin.yml  ci-llama-large-tests.yaml  ci-llama-quick-tests.yaml  ci-sdxl.yaml  ci-sglang-benchmark.yml  ci-sglang-integration-tests.yml  ci-shark-ai.yml  ci-sharkfuser.yml  ci-sharktank-nightly.yml  ci-sharktank.yml  ci-sharktuner.yml  ci-shortfin-nightly.yml  ci-tuner.yml  ci_eval.yaml  ci_eval_llama_3.1_8b_fp16.yml  ci_eval_short.yaml  ci_generate_irpa.yml  ci_linux_x64_asan-libshortfin.yml  ci_linux_x64_nogil-libshortfin.yml  ci_llama_3.1_405b_fp16_tp8.yml  pkgci.yml  (+14 more)
build_tools/: torch_rocm_version_map.py  update_iree_requirement_pins.py
docs/: amdgpu_kernel_optimization_guide.md  debug_flags.md  developer_guide.md  model_cookbook.md  nightly_releases.md  quantization.md  tune_sdxl.md  user_guide.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0530a9433b6bd4f8_dataset_transforms_test_py.html  z_08ad65b064ce2946_convert_dataset_test_py.html  z_08ad65b064ce2946_convert_to_json_test_py.html  z_08ad65b064ce2946_sharktank_test_py.html  z_10938998537536e0___init___py.html  z_10938998537536e0_clip_py.html  z_10938998537536e0_export_py.html  z_10938998537536e0_export_toy_text_model_iree_test_data_py.html  z_10938998537536e0_testing_py.html  z_143cbfd7fdfbe5eb_ops_test_py.html  z_143cbfd7fdfbe5eb_pipeline_parallelized_test_py.html  z_143cbfd7fdfbe5eb_qconv_test_py.html  z_143cbfd7fdfbe5eb_quantized_test_py.html  z_143cbfd7fdfbe5eb_sharded_test_py.html  z_143cbfd7fdfbe5eb_test_attention_ops_py.html  z_14b4a91d90347f7f___init___py.html  z_14b4a91d90347f7f_dataset_py.html  z_14b4a91d90347f7f_sharding_py.html  z_16ed182c0fe4cb37___init___py.html  z_16ed182c0fe4cb37__registry_py.html  z_16ed182c0fe4cb37_attention_impls_py.html  z_16ed182c0fe4cb37_cpu_impls_py.html  z_16ed182c0fe4cb37_custom_impls_py.html  z_16ed182c0fe4cb37_default_impls_py.html  z_16ed182c0fe4cb37_qconv_impls_py.html  z_16ed182c0fe4cb37_qlinear_impls_py.html  z_16ed182c0fe4cb37_quantized_impls_py.html  z_16ed182c0fe4cb37_shape_py.html  z_16ed182c0fe4cb37_sharded_impls_py.html  z_16ed182c0fe4cb37_signatures_py.html  z_16ed182c0fe4cb37_utils_py.html  z_19941df8d529ce36___init___py.html  z_19941df8d529ce36_attention_py.html  z_19941df8d529ce36_base_py.html  z_19941df8d529ce36_batch_matmul_transpose_b_py.html  z_19941df8d529ce36_bitcast_py.html  (+192 more)
scripts/: download_export_irpa.sh  export_and_compile.sh  image_verifier.py  merge_safetensors.py  run_example.sh  run_iree_benchmark.sh  run_offline_serving.sh  run_sdxl_flux.sh  run_serving.sh  server_utils.sh  setenv.sh  utils.py  validate_numerics.sh
shark-ai/: README.md  pyproject.toml  setup.py
sharkfuser/: .clang-format  .gitignore  CMakeLists.txt  CTestCustom.cmake.in  README.md  test_requirements.txt  version.json
sharkfuser/build_tools/cmake/: CTestCustom.cmake.in  CTestMacros.cmake  SharkfuserUtils.cmake  strip_codecov_files.cmake
sharkfuser/build_tools/docker/: exec_docker_ci.sh
sharkfuser/docs/: fusili.excalidraw  fusilli.excalidraw
sharkfuser/include/: fusili.h  fusilli.h
sharkfuser/include/fusili/: asm_emitter.h  context.h  external_tools.h  graph.h  logging.h  types.h
sharkfuser/include/fusili/attributes/: attributes.h  conv_attributes.h  tensor_attributes.h
sharkfuser/include/fusili/node/: conv_node.h  node.h
sharkfuser/include/fusilli/: asm_emitter.h  backend.h  context.h  external_tools.h  extras.h  graph.h  logging.h  types.h
sharkfuser/include/fusilli/attributes/: attributes.h  conv_attributes.h  tensor_attributes.h  types.h
sharkfuser/include/fusilli/backend/: backend.h  handle.h  runtime.h
sharkfuser/include/fusilli/graph/: context.h  graph.h
sharkfuser/include/fusilli/node/: conv_node.h  node.h
sharkfuser/include/fusilli/support/: asm_emitter.h  cache.h  external_tools.h  extras.h  logging.h
sharkfuser/samples/: CMakeLists.txt
sharkfuser/samples/convolution/: conv_fprop.cpp
sharkfuser/templates/: external_tools.h.in
sharkfuser/tests/: CMakeLists.txt  example_lit_test.cpp  lit.cfg.py  test_attributes.cpp  test_cache_empty.sh  test_context.cpp  test_conv_attributes.cpp  test_conv_node.cpp  test_example_lit.cpp  test_extras.cpp  test_graph.cpp  test_handle.cpp  test_logging.cpp  test_ssa_validation.cpp  test_tensor.cpp  test_tensor_attributes.cpp  utils.h
sharkfuser/tests/hip_tests/: CMakeLists.txt  README.md  test_hip_buffer_import_api.cpp
sharkfuser/tests/lit/: test_asm_emitter.cpp  test_conv_asm_emitter.cpp
sharktank/: README.md  conftest.py  pyproject.toml  requirements-tests.txt  requirements.txt  setup.cfg
sharktank/hip_kernels/: CMakeLists.txt  spec_topk.mlir
sharktank/hip_kernels/examples/: topk_f16.mlir  topk_f32.mlir
sharktank/hip_kernels/kernels/: topk_fp16_ukernel.c  topk_fp32_ukernel.c  topk_ukernel.c
sharktank/hip_kernels/specs/: topk_f16_spec.mlir  topk_f32_spec.mlir  topk_spec.mlir
sharktank/hip_kernels/tests/: topk.cpp  topk_f16.cpp  topk_f32.cpp  utils.h
sharktuner/: README.md  pyproject.toml  requirements-dev.txt  requirements-tuner.txt  requirements.txt
sharktuner/build_tools/: build_linux_package.sh
sharktuner/model_tuner/: README.md  __main__.py  compile_flags.txt  double_mmt.mlir  model_benchmark_flags.txt  model_tuner.py
sharktuner/sharktuner/: candidate_gen.py  common.py  common_test.py  constraint_generator.py  dispatch_constraints.py  dispatch_constraints_test.py  dispatch_parser.py  libtuner.py  libtuner_test.py  merge_td_specs.py  spec_builder.py  test_utils.py
sharktuner/tests/: candidate_gen_test.py  common_test.py  constraint_generator_test.py  dispatch_constraints_test.py  dispatch_parser_test.py  libtuner_test.py  spec_builder_test.py
shortfin/: CMakeLists.txt  README.md  dev_me.py  pyproject.toml  requirements-iree-compiler.txt  requirements-tests.txt  sdxl_config_i8.json
tuner/: README.md  requirements-dev.txt
(+479 files in other folders)
